make part of it work

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,10 @@ Encoding: UTF-8
 LazyData: true
 Depends: R (>= 2.10)
 Improts:
-    mclust
+  mclust,
+  checkmate,
+  ade4,
+  adegenet
 Suggests: 
     knitr,
     rmarkdown,
