--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,16 @@
 export(ARI)
 export(khaplotype)
 export(kmodes)
+export(plot_cluster)
 export(read_fastq)
+importFrom(ade4,scatter)
+importFrom(adegenet,dapc)
 importFrom(checkmate,checkClass)
 importFrom(checkmate,expect_choice)
 importFrom(checkmate,expect_class)
 importFrom(checkmate,expect_file_exists)
 importFrom(checkmate,expect_string)
 importFrom(mclust,adjustedRandIndex)
+useDynLib(CClust,r_khaplotype)
+useDynLib(CClust,r_kmodes)
+useDynLib(CClust,r_read_fastq)
