--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(khaplotype)
 export(kmodes)
 export(plot_cluster)
 export(read_fastq)
+importFrom(Rdpack,reprompt)
 importFrom(ade4,scatter)
 importFrom(adegenet,dapc)
 importFrom(checkmate,checkClass)
@@ -13,6 +14,7 @@ importFrom(checkmate,expect_class)
 importFrom(checkmate,expect_file_exists)
 importFrom(checkmate,expect_string)
 importFrom(mclust,adjustedRandIndex)
+importFrom(stringr,str_split)
 useDynLib(CClust,r_khaplotype)
 useDynLib(CClust,r_kmodes)
 useDynLib(CClust,r_read_fastq)
