--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,8 @@ importFrom(checkmate,expect_file_exists)
 importFrom(checkmate,expect_string)
 importFrom(mclust,adjustedRandIndex)
 importFrom(stringr,str_split)
+importFrom(utils,read.table)
+importFrom(utils,tail)
 useDynLib(CClust,r_khaplotype)
 useDynLib(CClust,r_kmodes)
 useDynLib(CClust,r_read_fastq)
