--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,8 @@ export(kmodes)
 export(plot_cluster)
 export(read_fastq)
 importFrom(Rdpack,reprompt)
-importFrom(ade4,scatter)
 importFrom(adegenet,dapc)
+importFrom(adegenet,scatter.dapc)
 importFrom(checkmate,checkClass)
 importFrom(checkmate,expect_choice)
 importFrom(checkmate,expect_class)
