--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(khaplotype)
 export(kmodes)
 export(plot_cluster)
 export(read_fastq)
+export(simulator)
 importFrom(Rdpack,reprompt)
 importFrom(adegenet,dapc)
 importFrom(adegenet,scatter.dapc)
@@ -19,3 +20,4 @@ importFrom(utils,tail)
 useDynLib(CClust,r_khaplotype)
 useDynLib(CClust,r_kmodes)
 useDynLib(CClust,r_read_fastq)
+useDynLib(CClust,r_simulate_data)
