--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(ARI)
 export(khaplotype)
 export(kmodes)
 export(plot_cluster)
+export(read_fasta)
 export(read_fastq)
 export(simulator)
 importFrom(Rdpack,reprompt)
@@ -19,5 +20,6 @@ importFrom(stringr,str_split)
 importFrom(utils,tail)
 useDynLib(CClust,r_khaplotype)
 useDynLib(CClust,r_kmodes)
+useDynLib(CClust,r_read_fasta)
 useDynLib(CClust,r_read_fastq)
 useDynLib(CClust,r_simulate_data)
